--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <course></course>
+  <st-pipes></st-pipes>
 </body>
 </html>
