--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <st-pipes></st-pipes>
+   <st-log></st-log>
 </body>
 </html>
+  
