--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-   <st-log></st-log>
+   <st-login></st-login>    
 </body>
 </html>
   
