--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-   <st-login></st-login>    
+   <git-user></git-user>
 </body>
 </html>
   
