--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
   <meta charset="utf-8">
   <title>Demo</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-   <git-user></git-user>
+<body> 
+    <st-books></st-books>
 </body>
-</html>
+</html>  
   
