--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body> 
-    <st-books></st-books>
+    <st-route></st-route>
 </body>
 </html>  
   
